--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
         <div class="gallery-card" id="card-9">
           <h2 class="gallery-card-title">Viagens</h2>
-          <a href="" class="gallery-card-btn">Mais</a>
+          <a href="" class="gallery-card-btn">Mais fotos</a>
         </div>
     </main>
     <footer>
